[project]
name = "product-category-project"
version = "0.1.0"
description = "A project for managing product categories and products."
authors = [
    { name = "Alena Kislenko", email = "alena.golovleva@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
target-version = ['py38']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 119
known_third_party = []
skip = ["__pycache__", ".egg-info", ".git", "venv"]
force_single_line = true
multi_line_output = 1

[tool.flake8]
max-line-length = 119